added semantic tags and content

--- a/index.html
+++ b/index.html
@@ -5,10 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PROJECT_0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    
+
+<nav>
+    <h1>PRADEEP KHARB</h1>
+    <ul>
+        <li>ABOUT</li>
+        <li>PORTFOLIO</li>
+        <li>QUOTES</li>
+        <li>CONTACT</li>
+    </ul>
+</nav>
+
+<header>
+    <img src="images/pk.jpg">
+    <h1>WEB DEVELOPER</h1>
+    <p>I am a storyteller who became a web developer and now i use my technical
+       skills to tell stories of different brands and products by building interesting
+       and dynamic web applications. My varied experience in entertainment, wellness, 
+       fitness and hospitality gives me wider perspective that adds value to my work.</p>
+</header>
+
+<main></main>
+
+<article>
+    <h2>ALEX ROWLAND</h2>
+    <P>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, 
+        consectetur, adipisci velit..."</P>
+</article>
+
+<aside>
+    <form>
+        <label>Name</label>
+        <input type="text" name="name" placeholder="Name">
+
+        <label>Email Address</label>
+        <input type="email" name="email" placeholder="Email Address">
+
+        <label>Phone Number</label>
+        <input type="number" name="phone" placeholder="Phone Number">
+
+        <label>Message</label>
+        <textarea name="message" placeholder="Message"></textarea>
+
+        <input type="submit">
+    </form>
+</aside>
+
+<footer>
+    <p>Pradeep Kharb | 323-301-8754 | pradeepkharb@hotmail.com</p>
+    <ul>
+        <li><i class="fab fa-facebook-square fa-2x"></i></li>
+        <li><i class="fab fa-instagram fa-2x"></i></li>
+        <li><i class="fab fa-twitter-square fa-2x"></i></li>
+    </ul>
+</footer>
+
 </body>
 </html>
