--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script defer src="js/main.js"></script>
 </head>
 <body>
@@ -47,7 +48,27 @@
 </header>
 
 <a name="portfolio"></a>
-<main></main>
+<main class="container">
+      
+        <h1>MY PROJECTS</h1> 
+        <!-- begin slider-outer -->
+        <div class="slider-outer">
+
+            <img src="images/arrow-left.png" class="prev" alt="Previous">
+
+            <div class="slider-inner">
+                <img src="images/space1.jpg" class="active">
+                <img src="images/space2.png">
+                <img src="images/space3.jpg">
+                <img src="images/blockchain.jpg">
+            </div>
+
+            <img src="images/arrow-right.png" class="next" alt="Next">
+
+        </div>  
+        <!-- end of slider-outer -->
+
+</main>
 
 <a name="quotes"></a>
 <article >
@@ -93,7 +114,7 @@
         <a href="#top" class=""><i class="fas fa-arrow-alt-circle-up fa-2x"></i></a>
     </div>
     <!-- end of go-top -->
-    
+
 <footer>
     <!-- <div class="foot-left"> -->
        <h2>PRADEEP KHARB  |  323-301-8754  |  pradeepkharb@hotmail.com</h2>
